# TenderTestTask

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  result.txt
.github/workflows/: docker-image.yml
Dockerfiles/: amqp.Dockerfile
Dockerfiles/conf/: rabbitmq.conf  redis.conf
config/: config.py  settings.toml
config/bash_scripts/: start_workers.sh
config/scripts/: testing.sh
services/: __init__.py  my_celery.py
services/work_with_pages_service/: async_pages_process.py  tasks.py
test/: conftest.py  test_celery_tasks.py
test/data/: page_0.html  page_1.html  xml_file_0.xml  xml_file_1.xml  xml_file_10.xml  xml_file_11.xml  xml_file_12.xml  xml_file_13.xml  xml_file_14.xml  xml_file_15.xml  xml_file_16.xml  xml_file_17.xml  xml_file_18.xml  xml_file_19.xml  xml_file_2.xml  xml_file_3.xml  xml_file_4.xml  xml_file_5.xml  xml_file_6.xml  xml_file_7.xml  xml_file_8.xml  xml_file_9.xml
test/utils/: upload_test_data.py
