[tool.poetry]
name = "testtask"
version = "0.1.0"
description = ""
authors = ["Kirill <2vvoropaevv2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["rabbitmq", "redis"], version = "^5.4.0"}
pytest = "^8.3.5"
beautifulsoup4 = "^4.13.3"
dynaconf = "^3.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
